moved padding to outermost div

--- a/HitomiScrollViewerWebApp/Pages/BrowsePage.razor
+++ b/HitomiScrollViewerWebApp/Pages/BrowsePage.razor
@@ -2,8 +2,8 @@
 
 <PageTitle>Browse</PageTitle>
 
-<div style="height: 100%">
-    <div class="d-flex pa-8 gap-4">
+<div style="height: 100%" class="pa-8">
+    <div class="d-flex gap-4">
         <TagSearchPanelCollection Style="flex: 3;"
                                   TagSearchPanelChipModels="@_tagSearchPanelChipModels"
                                   ChipModelsChanged="@OnChipModelsChanged" />
