did some property name refactoring and in progress of implementing GallerySort

--- a/HitomiScrollViewerWebApp/Components/LTKSearchView.razor
+++ b/HitomiScrollViewerWebApp/Components/LTKSearchView.razor
@@ -24,7 +24,7 @@
     <MudTextField T="string"
                   Label="Additional keywords"
                   Variant="Variant.Outlined"
-                  Text="@SearchKeywordText"
-                  ValueChanged="@SearchKeywordTextChanged"
+                  Text="@TitleSearchKeyword"
+                  ValueChanged="@TitleSearchKeywordChanged"
                   Clearable />
 </div>
