--- a/HitomiScrollViewerWebApp/Components/SearchFilterItem.razor
+++ b/HitomiScrollViewerWebApp/Components/SearchFilterItem.razor
@@ -27,11 +27,11 @@
                     </td>
                 </tr>
             }
-            @if (Model.SearchKeywordText.Length > 0)
+            @if (Model.TitleSearchKeyword.Length > 0)
             {
                 <tr>
                     <th>Keywords</th>
-                    <td>@Model.SearchKeywordText</td>
+                    <td>@Model.TitleSearchKeyword</td>
                 </tr>
             }
         </tbody>
