--- a/HitomiScrollViewerWebApp/Layout/MainLayout.razor
+++ b/HitomiScrollViewerWebApp/Layout/MainLayout.razor
@@ -38,7 +38,7 @@
                 } else {
                     <MudProgressCircular Indeterminate="true" Size="Size.Large" Color="Color.Primary" Style="font-size: 4rem" />
                 }
-                <span>@_status</span>
+                <span>@_statusMessage</span>
             </div>
         </div>
     }
