--- a/HitomiScrollViewerWebApp/Components/GallerySortItemView.razor
+++ b/HitomiScrollViewerWebApp/Components/GallerySortItemView.razor
@@ -1,10 +1,10 @@
-﻿<MudPaper Class="d-flex gap-4">
+﻿<MudPaper Class="d-flex gap-2 my-2 pa-2 align-center" Outlined>
     <MudIcon Icon="@Icons.Material.Filled.DragIndicator" />
-    <MudText>@(_galleryPropertyNames[GallerySort.Property])</MudText>
-    <MudDivider/>
-    <MudSelect T="@SortDirection" @bind-Value="@GallerySort.SortDirection">
+    <MudText>@(Constants.GALLERY_PROPERTY_NAMES[GallerySort.Property])</MudText>
+    <MudSpacer />
+    <MudSelect T="@SortDirection" @bind-Value="@GallerySort.SortDirection" Variant="Variant.Outlined" Style="min-width: 140px">
         <MudSelectItem T="@SortDirection" Value="SortDirection.Ascending">Ascending</MudSelectItem>
         <MudSelectItem T="@SortDirection" Value="SortDirection.Descending">Descending</MudSelectItem>
     </MudSelect>
-    <MudIconButton Icon="@Icons.Material.Filled.Delete" />
+    <MudIconButton Icon="@Icons.Material.Filled.Delete" OnClick="@(() => OnDeleteClick.InvokeAsync(GallerySort))" />
 </MudPaper>
