completed implementing browse page

--- a/HitomiScrollViewerWebApp/Components/GalleryBrowseItem.razor
+++ b/HitomiScrollViewerWebApp/Components/GalleryBrowseItem.razor
@@ -1,40 +1,45 @@
-﻿<div class="gallery-browse-item">
-    <MudPaper Class="pa-2 d-flex flex-column gap-2" Height="@Height" Style="overflow-y: auto; overflow-x: hidden;" Outlined>
-        <MudText Typo="Typo.h6">@Gallery.Title</MudText>
-        <a href=@($"/gallery/{Gallery.Id}") target="_blank">
-            <div class="d-flex" style="width: 100%; height: 150px;">
-                @for (int i = 1; i <= MAX_THUMBNAIL_IMAGES; i++) {
-                    <img src=@($"{_baseImageUrl}&index={i}") alt=@($"Image {i}") loading="lazy" />
-                }
-            </div>
-        </a>
-        <table style="border-collapse: collapse; width: 100%;" class="tag-collection">
-            <tbody>
+﻿<div class="gallery-browse-item pa-2 d-flex flex-column gap-2 rounded @(IsSelected ? "selected" : "") @(IsEditing ? "editing" : "")"
+     style="height: @Height; overflow-y: auto; overflow-x: hidden;"
+     onclick="@OnClick"
+     @oncontextmenu="@(OpenContextMenu)"
+     @oncontextmenu:preventDefault>
+    <MudText Typo="Typo.h6">@Gallery.Title</MudText>
+    <a href=@($"/gallery/{Gallery.Id}") target="_blank">
+        <div class="d-flex" style="width: 100%; height: 150px;">
+            @for (int i = 1; i <= MAX_THUMBNAIL_IMAGES; i++) {
+                <img src=@($"{_baseImageUrl}&index={i}") alt=@($"Image {i}") loading="lazy" />
+            }
+        </div>
+    </a>
+    <table style="border-collapse: collapse; width: 100%;" class="tag-collection">
+        <tbody>
+            <tr>
+                <th>Id</th>
+                <td>@Gallery.Id</td>
+            </tr>
+            <tr>
+                <th>Language</th>
+                <td>@Gallery.Language.LocalName</td>
+            </tr>
+            <tr>
+                <th>Type</th>
+                <td>@Gallery.Type.Value</td>
+            </tr>
+            @foreach (var pair in _tagCollections) {
                 <tr>
-                    <th>Id</th>
-                    <td>@Gallery.Id</td>
+                    <th>@pair.Key</th>
+                    <td>
+                        <div class="d-flex flex-wrap gap-1">
+                            @foreach (TagDTO tag in pair.Value) {
+                                <span class="mud-chip-filled rounded px-1">@tag.Value</span>
+                            }
+                        </div>
+                    </td>
                 </tr>
-                <tr>
-                    <th>Language</th>
-                    <td>@Gallery.Language.LocalName</td>
-                </tr>
-                <tr>
-                    <th>Type</th>
-                    <td>@Gallery.Type.Value</td>
-                </tr>
-                @foreach (var pair in _tagCollections) {
-                    <tr>
-                        <th>@pair.Key</th>
-                        <td>
-                            <div class="d-flex flex-wrap gap-1">
-                                @foreach (TagDTO tag in pair.Value) {
-                                    <span class="mud-chip-filled rounded px-1">@tag.Value</span>
-                                }
-                            </div>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </MudPaper>
+            }
+        </tbody>
+    </table>
 </div>
+<MudMenu PositionAtCursor @ref="@_contextMenu" PopoverClass="rounded" DropShadow>
+    <MudMenuItem Label="Delete" Icon="@Icons.Material.Filled.Delete" OnClick="@(() => DeleteRequested.InvokeAsync(Gallery.Id))" />
+</MudMenu>
