--- a/HitomiScrollViewerWebApp/Components/GalleryBrowseItem.razor.css
+++ b/HitomiScrollViewerWebApp/Components/GalleryBrowseItem.razor.css
@@ -1,11 +1,27 @@
-﻿.gallery-browse-item a {
-    border: 1px solid rgb(0, 0, 0, 0.00)
+﻿.gallery-browse-item {
+    border: 1px solid var(--mud-palette-lines-default);
 }
 
-.gallery-browse-item a:hover {
-    border: 1px solid var(--mud-palette-primary);
-    background-color: var(--mud-palette-action-default-hover);
-}
+    .gallery-browse-item:hover {
+        border: 1px solid var(--mud-palette-action-default)
+    }
+
+    .gallery-browse-item.editing:hover {
+        cursor: pointer;
+    }
+
+    .gallery-browse-item.selected {
+        border: 3px solid var(--mud-palette-primary)
+    }
+
+    .gallery-browse-item a {
+        border: 1px solid rgb(0, 0, 0, 0.00)
+    }
+
+        .gallery-browse-item a:hover {
+            border: 1px solid var(--mud-palette-secondary);
+            background-color: var(--mud-palette-action-default-hover);
+        }
 
 .tag-collection :is(td, th) {
     border-color: var(--mud-palette-lines-default);
