--- a/HitomiScrollViewerWebApp/Components/GalleryBrowseItem.razor
+++ b/HitomiScrollViewerWebApp/Components/GalleryBrowseItem.razor
@@ -5,7 +5,7 @@
      @oncontextmenu:preventDefault>
     <MudText Typo="Typo.h6">@Gallery.Title</MudText>
     <a href=@($"/gallery/{Gallery.Id}") target="_blank">
-        <div class="d-flex" style="width: 100%; height: 150px;">
+        <div class="d-flex" style="width: 100%; height: 150px; overflow-x: hidden;">
             @for (int i = 1; i <= MAX_THUMBNAIL_IMAGES; i++) {
                 <img src=@($"{_baseImageUrl}&index={i}") alt=@($"Image {i}") loading="lazy" />
             }
