--- a/HitomiScrollViewerWebApp/Pages/SettingsPage.razor
+++ b/HitomiScrollViewerWebApp/Pages/SettingsPage.razor
@@ -8,7 +8,7 @@
     <MudText Typo="Typo.h4" Class="mb-8">Settings</MudText>
     @* TODO create SettingsCard.razor by referencing Windows Community Toolkit Gallery's SettingsCard *@
     <MudPaper Class="pa-4">
-        <MudSelect T="string" Label="Language" Variant="Variant.Filled" Style="width: 200px;">
+        <MudSelect T="string" Label="Language" Variant="Variant.Outlined" Style="width: 200px;">
             <MudSelectItem T="string">English</MudSelectItem>
             <MudSelectItem T="string">Korean</MudSelectItem>
         </MudSelect>
